# fedora-galaxy-book-sound

./: .gitignore  Cargo.toml  Containerfile  Makefile  README.en.md  README.es.md  README.it.md  README.md  build.rs
data/: com.caioregis.GalaxyBookSound.desktop  com.caioregis.GalaxyBookSound.metainfo.xml
packaging/fedora/: galaxybook-sound.spec
po/: en.po  es.po  galaxybook-sound.pot  it.po
scripts/: install-galaxybook-sound-launcher.sh  package-version.sh  source-date-epoch.sh
src/: i18n.rs  lib.rs  main.rs  updates.rs
src/actions/: bindings.rs  mod.rs  runtime.rs
src/ui/: about.rs  mod.rs  rows.rs
src/ui/window/: build.rs  mod.rs  pages.rs  shell.rs
